# BaoZouPTu

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: androidApk-key1.jks  app-release.apk  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/fonts/: fill space
app/src/main/cpp/: CMakeLists.txt  ColorTransfer.cpp  ColorTransfer.h  ImageSynthesis.cpp  MyUtil.cpp  MyUtil.h  edgeBlur.cpp  edgeBlur.h  newColorTransfer.cpp  newColorTransfer.h
app/src/main/res/animator/: slide_bottom_in.xml  slide_bottom_out.xml
app/src/main/res/color/: imageview_tint_function.xml
app/src/main/res/drawable/: background_absorb_window.xml  background_balloon.xml  background_corner_shape.xml  background_edit_text.xml  background_pic_operation.xml  background_round.xml  background_round_black.xml  background_round_corner_black.xml  background_round_corner_grey.xml  background_round_corner_test.xml  btn_pressable_background_oval.xml  btn_pressable_background_rectangle.xml  click_impact_btn.xml  divider_cut_chose.xml  divider_dialog_save_set.xml  divider_picture_opration.xml  (+25 more)
app/src/main/res/drawable-v21/: rip_blue_cornor_backgound.xml
app/src/test/jni/: Android.mk  Application.mk  PictureSynthesis.cpp  a_baozouptu_ptu_tietu_pictureSynthesis_PictureSynthesis.h
gradle/wrapper/: gradle-wrapper.properties
mytest/: build.gradle
mytest/src/main/: AndroidManifest.xml
openCVLibrary310/: build.gradle
test/: build.gradle
test/src/main/: AndroidManifest.xml
tt/: build.gradle
tt/src/main/: AndroidManifest.xml
(+427 files in other folders)
